corrected spacing on footer and consolidated CSS styling changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,37 @@
-
 body {
-	color:#e3b6be;
+	color: #e3b6be;
 }
 a {
 	text-decoration: none;
 	color: #e3b6be;
 }
-	.custom-title {
-		font-size: 2rem; 
-	}
-p {
-	color:#e3b6be;
-}
-#emailHelp {
-    color: #e3b6be; 
-}
-.navbar-nav .nav-link {
-    color: #e3b6be; 
-	transition: color 0.5s;
-}
-.navbar-nav .nav-link:hover {
-    color: rgb(224, 224, 224); 
-}
-.navbar-brand {
-    color: #fff; 
-}
-.btn-outline-dark {
-   color:#e3b6be;
-}
 a:hover {
 	text-decoration: none;
 	color: grey;
 }
-.homepage h1,
-.homepage a {
-    color: #e3b6be; 
+p {
+	color: #e3b6be;
+}
+.custom-title {
+	font-size: 2rem;
+}
+#emailHelp,
+.list-group-item,
+.btn-outline-dark,
+.homepage h1  {
+	color: #e3b6be;
+}
+.navbar-nav,
+.nav-link {
+	color: #e3b6be;
+	transition: color 0.5s;
+}
+.navbar-nav,
+.nav-link:hover {
+	color: rgb(224, 224, 224);
+}
+.navbar-brand {
+	color: #fff;
 }
 .homepage {
 	animation: fadeIn 2s;
@@ -44,22 +41,22 @@ a:hover {
 	-ms-animation: fadeIn 2s;
 }
 .addToCartButton {
-    color: #e3b6be; 
-    border-color: #e3b6be; 
+	color: #e3b6be;
+	border-color: #e3b6be;
 }
 .addToCartButton:hover {
-    color:white; 
-    border-color: #e3b6be; 
-    background-color: #6c757d; 
+	color: white;
+	border-color: #e3b6be;
+	background-color: #6c757d;
 }
 .remove-from-cart {
-    color: #6c757d; 
-    border-color: #ace7ef; 
+	color: #6c757d;
+	border-color: #ace7ef;
 }
 .remove-from-cart:hover {
-    color: #6c757d; 
-    background-color: #ace7ef; 
-    border-color: #ace7ef; 
+	color: #6c757d;
+	background-color: #ace7ef;
+	border-color: #ace7ef;
 }
 @keyframes fadeIn {
 	0% {
@@ -105,9 +102,6 @@ a:hover {
 	background-color: black;
 	opacity: 0.5;
 }
-.list-group-item {
-	color:#e3b6be
-}
 .checkout-list {
 	max-height: 25%;
 }
@@ -127,19 +121,12 @@ a:hover {
 #cartDeleteModalBody {
 	display: none;
 }
-footer {
-    height: 90px; 
-	padding: 10px;
-	text-align: center;
-	 
-	}
 .footer-border p {
-	border-top:1px solid #fff;
+	border-top: 1px solid #fff;
 }
 
 @media screen and (max-width: 640px) {
 	.hiddenDiv {
 		display: none;
 	}
-	
 }
